[package]
name = "ftthd"
version = "0.1.0"
edition = "2021"

authors = ["Menhera.org Developers"]
description = "Routing daemon mainly designed for Japanese FTTH connections"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/ftthd"
homepage = "https://github.com/menhera-org/ftthd"

[dependencies]
futures = "0.3.31"
libc = "0.2.169"
log = "0.4.22"
netlink-packet-core = "^0.7"
netlink-packet-route = "^0.19"
netlink-proto = "^0.11"
nix = { version = "0.29.0", features = ["net", "socket", "uio"] }
rtnetlink = "0.14.1"
serde = { version = "1.0.217", features = ["derive"] }
socket2 = { version = "0.5.8", features = ["all"] }
toml = "0.8.19"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
clap = { version = "4.5.24", features = ["derive"] }
rand = "0.8.5"
parking_lot = "0.12.3"
